--- a/Dockerfile.wagtail
+++ b/Dockerfile.wagtail
@@ -4,17 +4,13 @@ FROM python:3.12-slim AS wagtail-base
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /app
+WORKDIR /app/cplans
 
 RUN apt-get update \
     && apt-get install -y build-essential libpq-dev curl \
     && apt-get clean
 
-COPY backend/requirements.txt ./
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-COPY backend ./backend
-
-WORKDIR /app/backend
 
 CMD ["sh"]
