--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: docker/Dockerfile.wagtail
     volumes:
-      - ./backend:/app/backend
+      - ./cplans:/app/cplans
     env_file:
       - .env
     depends_on:
