--- a/Dockerfile.wagtail
+++ b/Dockerfile.wagtail
@@ -1,14 +1,21 @@
 # docker/Dockerfile.wagtail
-FROM python:3.12-slim AS wagtail-base
+FROM python:3.12-slim-bullseye AS wagtail-base
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+# Set environment variables
+ENV PIP_DISABLE_PIP_VERSION_CHECK 1
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app/cplans
+COPY cplans/requirements.txt .
 
 RUN apt-get update \
-    && apt-get install -y build-essential libpq-dev curl \
-    && apt-get clean
+    && apt-get install -y \
+        build-essential \
+        libpq-dev \
+        curl \
+        postgresql-client \
+        && apt-get clean
 
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
